--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
           <h1>Some of My Favorite Books!</h1>
         </div>
       </div>
-
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-        Launch demo modal
-      </button>
-
+ 
       <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -51,7 +46,7 @@
             <div class="card-body">
               <h5 id="book0Title" class="card-title">Book Title</h5>
               <p id="book0Summary" class="card-text">Summary</p>
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Learn More</a>
             </div>
           </div>
         </div>
