--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="card-body">
               <h5 id="book2Title" class="card-title">Book Title</h5>
               <p id="book2Summary" class="card-text">Summary</p>
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Learn More</a>
             </div>
           </div>
         </div>
