--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
 
-      <!-- Modal -->
+      <!-- Modal 1 -->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -29,6 +29,44 @@
               </button>
             </div>
             <div class="modal-body" id="book0Reviews">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal 2 -->
+      <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="book1Author">Book Author</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body" id="book1Reviews">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal 3 -->
+      <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="book2Author">Book Author</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body" id="book2Reviews">
               ...
             </div>
             <div class="modal-footer">
@@ -55,7 +93,7 @@
             <div class="card-body">
               <h5 id="book1Title" class="card-title">Book Title</h5>
               <p id="book1Summary" class="card-text">Summary</p>
-              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Learn More</a>
+              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal1">Learn More</a>
             </div>
           </div>
         </div>
@@ -65,7 +103,7 @@
             <div class="card-body">
               <h5 id="book2Title" class="card-title">Book Title</h5>
               <p id="book2Summary" class="card-text">Summary</p>
-              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Learn More</a>
+              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">Learn More</a>
             </div>
           </div>
         </div>
